--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "axois": "^0.0.1-security",
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
